--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "target": "es5",
     "module": "commonjs",
     "strict": true,
-    "outDir": "dist",
-    "sourceMap": true
+    "outDir": "dist"
   }
 }
